# hook-func

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  test-hook1.c  test-hook2.c  test-hook3.c  test-hook4.c
src/: CMakeLists.txt  arch-arm64.c  arch-arm64.h  arch-x86.c  arch-x86.h  disasm.c  disasm.h  hook-func-internal.h  hook-func.c  hook-func.h  template.inc
src/asm/: prehook-arm64-gas.S  prehook-x86_64-sysv.S
